Fixed the title on the Corona page in high contrast

--- a/writing/corona/style/corona.css
+++ b/writing/corona/style/corona.css
@@ -15,7 +15,7 @@ body
 	width: 70vw;
 	margin: 0 auto;
 	
-	color: rgb(255, 255, 255);
+	color: rgb(255, 255, 255) !important;
 	text-align: center;
 	font-size: 450%;
 	font-family: "Gentium Book Basic", serif;
